<resources>
    <string name="app_name">Stuffs</string>
    <string name="action_settings">Settings</string>
    <string name="read_barcode">Read barcode</string>
    <string name="id">ID</string>
    <string name="location">Location</string>
    <string name="edit">Edit</string>
    <string name="reset">Reset</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="new_item">New item</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="start_barcodereader">Starting barcode reader..</string>
    <string name="barcodereader_not_found">No barcode scanner app found.</string>
    <string name="title_activity_item_edit">ItemEditActivity</string>
    <string name="save_item_edit">Saving item..</string>
    <string name="save_translation_edit">Saving text..</string>
    <string name="add_name">Add name</string>
    <string name="remove_sign">⌫</string>
    <string name="add_translation">Add translation</string>
    <string name="translations">Translations</string>
    <string name="edit_item">Edit item</string>
    <string name="name">Name</string>
    <string name="delete_item_sure">Are you sure you want to delete the item?</string>
    <string name="delete_collection_sure">Are you sure you want to delete the collection?</string>
    <string name="type">Type</string>
    <string name="search">Search</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="db_clear_topic">Clear Database?</string>
    <string name="db_clear_message">Do you want to clear the database?</string>
    <string name="db_clear_success">Database cleared successfully.</string>

    <string name="db_export_success">Database exported successfully.</string>
    <string name="db_import_success">Database imported successfully.</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="import_export_helper">The \"export\" button produces the data in text, to the following textfield. The \"import\" button also uses the same textfield to import.</string>
    <string name="title_activity_collection">CollectionActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_collection_edit">CollectionEditActivity</string>
    <string name="edit_collection">Edit collection</string>
    <string name="title_activity_type_edit">TypeEditActivity</string>
    <string name="title_type_settings">Type settings</string>
    <string name="types_header">Types</string>
    <string name="language_header">Language</string>
    <string name="database_header">Database</string>
    <string name="edit_types">Edit types</string>
    <string name="edit_languages">Edit languages</string>
    <string name="types_add">Add type</string>
    <string name="type_remove_topic">Remove type?</string>
    <string name="type_remove_message">Do you want to remove the type?</string>
    <string name="description">Description</string>
    <string name="picture">Picture</string>
    <string name="link">Link</string>
    <string name="action_cancel">Cancelled action</string>
    <string name="action_save_collection">Saving collection</string>
    <string name="new_collection">New collection</string>
    <string name="code">Code</string>
    <string name="volume">Volume</string>
    <string name="no_image">No image.</string>
    <string name="dismiss">Dismiss</string>
    <string name="define_some_types">Define some item types first!</string>
    <string name="import_export_warning">Importing data will reboot the application.</string>
    <string name="title_activity_image">Image edit</string>
    <string name="crop">Crop</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <color name="warning">#FF0000</color>
    <color name="white">#FFFFFF</color>
    <color name="grey">#444444</color>
    <string name="title_activity_image_manipulation">ImageManipulationActivity</string>
    <string name="brightness">brightness</string>
    <string name="resize">Resize</string>
    <string name="frame_lock">Frame lock</string>
    <string name="frame_locked">Frame Locked</string>
    <string name="frame_unlocked">Frame Unlocked</string>
</resources>
