<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.icegem.stuffapp.ui.CollectionViewActivity">

    <item
        android:id="@+id/action_new"
        android:title="@string/new_item"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:orderInCategory="20"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:orderInCategory="30"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="90"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
