<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_gravity="center_vertical|center_horizontal"
        android:id="@+id/picture"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="matrix" />

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:layout_gravity="center|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#80FFFFFF">

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_save"
            android:text="@string/save"
            android:onClick="save"
            style="@style/Base.Widget.AppCompat.Button.Small"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_button"
            android:text="@string/reset"
            android:onClick="reset"
            style="@style/Base.Widget.AppCompat.Button.Small"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_cancel"
            android:text="@string/cancel"
            android:onClick="dismiss"
            style="@style/Base.Widget.AppCompat.Button.Small"/>
    </LinearLayout>

</FrameLayout>
