<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.icegem.stuffapp.ui.TextEditActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list"
        android:layout_margin="5dp">
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_addTranslation"
            android:text="@string/add_translation"
            android:onClick="add"
            android:layout_alignParentEnd="false"
            style="@style/Base.Widget.AppCompat.Button.Small" />

        <Button
            android:layout_width="wrap_content"
            android:minWidth="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_save"
            android:text="@string/save"
            android:layout_toStartOf="@+id/id_cancel"
            android:onClick="save"
            style="@style/Base.Widget.AppCompat.Button.Small" />

        <Button
            android:layout_width="wrap_content"
            android:minWidth="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/id_cancel"
            android:text="@string/cancel"
            android:onClick="cancel"
            style="@style/Base.Widget.AppCompat.Button.Small" />
    </RelativeLayout>

</LinearLayout>



