<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.icegem.stuffapp.ui.ItemEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <!-- Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/name_header"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusableInTouchMode="false"
                android:id="@+id/name" />
        </LinearLayout>

        <!-- Description -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:id="@+id/description_header"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusableInTouchMode="false"
                android:id="@+id/description" />
        </LinearLayout>

        <!-- Picture
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/picture"
                android:id="@+id/picture_header"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/picture"
                />
        </LinearLayout>
        -->

        <!-- Link -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:id="@+id/link_header"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/link"
                />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_save"
            android:text="@string/save"
            android:layout_toStartOf="@+id/cancel"
            android:onClick="save"
            style="@style/Base.Widget.AppCompat.Button.Small"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:onClick="cancel"
            style="@style/Base.Widget.AppCompat.Button.Small"/>
    </RelativeLayout>
</LinearLayout>



